# Credit-Score-Classification

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
notebooks/: 01-leitura_e_exploracao.ipynb  02-limpeza_e_preparacao.ipynb  03-analise_exploratoria.ipynb  04-modelagem.ipynb  05-discussao.ipynb
src/construir_graficos/: correlacao.py  graficos_categoricos.py  graficos_numericos.py  outliers.py
src/funcoes_auxiliares/: comparar_tipos_dados.py  resumo_nulos.py  tratar_valores_por_id.py
src/funcoes_limpeza/: limpar_credit_history_age.py  limpar_type_of_loan.py  limpeza_float.py  limpeza_int.py
src/modelagem/: baseline.py  tuning.py  visualizacoes.py
src/pre_processamento/: encoders.py  inspecionar_dados_processados.py  pipelines.py  pre_processadores.py  type_of_loan.py
